# asp-libs

./: .gitignore  Cargo.toml  INVARY_FILES.md  Makefile  README.md  test_hashdir_req.json  test_req.json
.github/workflows/: main.yml
appraisal_asps/: Makefile
appraisal_asps/openssl/: Makefile
appraisal_asps/sig_appr_id/: Makefile  sig_appr.c
attacks/: attack_filter_config.sh  attack_filter_img.sh  attack_kernel.sh  attack_rewrite_config.sh  attack_rewrite_img.sh  check_kernel_attack.sh  mod_userspace_file.sh  repair_filter_config.sh  repair_filter_img.sh  repair_kernel.sh  repair_rewrite_config.sh  repair_rewrite_img.sh
attacks/cds_attacks/: attack_filter_config.sh  attack_filter_img.sh  attack_rewrite_config.sh  attack_rewrite_img.sh  repair_filter_config.sh  repair_filter_img.sh  repair_rewrite_config.sh  repair_rewrite_img.sh
attacks/targ_files/: filter_one_good
attacks/theorem_attacks/: attack_test_diff_type.sh  attack_test_spoof_check_type.sh  attack_theorem_axiom.sh  attack_theorem_proof_bad.sh  attack_theorem_proof_diff.sh  attack_theorem_type.sh  check_env_vars.sh  repair_all.sh  repair_test.sh  repair_theorem.sh
attestation_asps/: Makefile  a.out  test_asp.out
attestation_asps/appr_cds_id/: Makefile  appr_cds_id.c
attestation_asps/appraise_id/: Makefile  appraise_id.c
attestation_asps/attest1_id/: Makefile
attestation_asps/attest2_id/: Makefile
attestation_asps/attest_id/: Makefile  attest_id.c
attestation_asps/certificate_id/: Makefile  certificate_id.c
attestation_asps/gather_file_contents_id/: Makefile  gather_file_contents_id.c
attestation_asps/hash_file_contents_id/: Makefile  hash_file_contents_id.c
attestation_asps/hash_id/: Makefile  hash.c
attestation_asps/hashfile_id/: Makefile  hashfile_id.c
attestation_asps/hsh_id/: Makefile  hsh.c
attestation_asps/large_output_id/: Makefile  gen_large_output.py  large_output_id.c
attestation_asps/python_asps/: Makefile  TEMPLATE.py.txt  copland.py  p_hashfile_id.py
attestation_asps/query_kim_id/: Makefile  query_kim_id.c
attestation_asps/read_file_id/: Makefile  read_file.c
attestation_asps/rust_asps/: Cargo.toml
attestation_asps/rust_asps/src/: lib.rs
attestation_asps/rust_asps/src/lib/: json.rs
attestation_asps/sig_id/: Makefile  sig.c
attestation_asps/ssl_sig_id/: Makefile  sig.c
attestation_asps/test_asp/: Makefile  test_asp.c
attestation_asps/tpm_asps/: Cargo.toml  Makefile  appraise_r_sig_tpm.rs
common_files/: unsecure_priv_key_dont_use.pem  unsecure_pub_key_dont_use.pem  unsecure_pub_key_dont_use_bad.pem
executables/appraise/: Cargo.toml
executables/attest/: Cargo.toml
executables/certificate/: Cargo.toml
executables/goldenevidence_appr/: Cargo.toml
executables/hamr_readfile_range_many/: Cargo.toml
executables/hashdir/: Cargo.toml
executables/hashevidence/: Cargo.toml
executables/hashfile/: Cargo.toml
executables/hashfile_appr/: Cargo.toml
executables/invary_get_measurement/: Cargo.toml
executables/invary_get_measurement_appr/: Cargo.toml
external_deps/hamrLib/hamrLib/: Cargo.toml
external_deps/hamrLib/hamrLib/src/: hamr_helpers.rs  lib.rs
json_headers/: Copland.h  CoplandJson.h
lib/: Cargo.toml  Copland.h  CoplandJson.h  OpenSSL_Helper.h
supporting_scripts/: README.md  change_perms.sh  gen_keys.sh  gen_policies.sh  kill_tpm.sh  start_tpm.sh
testing/: .gitignore  Makefile  test_req_provision_long.json
tools/: install_deps.sh
(+129 files in other folders)
