[package]
name = "rust_asps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r_hashfile_id"
path = "src/bin/r_hashfile_id.rs"
test = false
bench = false

[[bin]]
name = "r_uptime_id"
path = "src/bin/r_uptime_id.rs"
test = false
bench = false

[dependencies]
rust_am_lib = { git = "https://github.com/ku-sldg/rust-am-lib.git", veersion = "0.1.1"}
serde_json = "1.0.125"
anyhow = "1.0.86"
base64 = "0.13"
sha2 = "0.10.8"
sysinfo = "0.31.3"
