[package]
name = "rust_asps_tpm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r_sig_tpm"
path = "src/bin/r_sig_tpm.rs"
test = false
bench = false

[[bin]]
name = "appraise_r_sig_tpm"
path = "src/bin/appraise_r_sig_tpm.rs"
test = false
bench = false

[dependencies]
rust_am_lib = { git = "https://github.com/ku-sldg/rust-am-lib.git", version = "0.2.0"}
serde_json = "1.0.125"
anyhow = "1.0.86"
sha2 = "0.10.8"
sysinfo = "0.31.3"
curl = "0.4.47"
base64 = "0.22.1"
serde = { version = "1.0.214", features = ["derive"] }
hex = "0.4.3"
openssl = "0.10.68"
tss-esapi = "7.5.1"
