[package]
name = "hamrLib"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
name = "hamrLib"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
#serde_json = "1.0"
colored = "1.7"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = "1.0"
quote = "1.0.36"
tempfile = "3.10.1"
clap = { version = "4.3.11", features = ["derive"] }
once_cell = "1.8.0"
which = "8.0.0"
verusfmt = "0.6.0"
